SI/si-ii-tp2-groupe6-22-23/deploy/deployment_drinkRest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drink-rest
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drink-rest
  template:
    metadata:
      labels:
        app: drink-rest
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: registry.forge.hefr.ch/si-ii-tp-groupe6-22-23/si-ii-tp2-groupe6-22-23/drink-rest:${TAG}
          name: drink-rest
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: drink-rest-svc
  namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8082
  selector:
    app: drink-rest
  type: ClusterIP
