SI/si-ii-tp2-groupe6-22-23/deploy/deployment_ratingRest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-rest
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-rest
  template:
    metadata:
      labels:
        app: rating-rest
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: registry.forge.hefr.ch/si-ii-tp-groupe6-22-23/si-ii-tp2-groupe6-22-23/rating-rest:${TAG}
          name: rating-rest
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rating-rest-svc
  namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app: rating-rest
  type: ClusterIP
