SI/si-ii-tp2-groupe6-22-23/deploy/deployment_rabbitMq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.11-management
          name: rabbitmq
          ports:
            - containerPort: 5672
              name: mqtt
              protocol: TCP
            - containerPort: 15672
              name: management
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
  namespace: default
spec:
  ports:
    - name: mqtt
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 80
      targetPort: 15672
  selector:
    app: rabbitmq
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-http
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rabbitmq.159.100.248.27.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-svc
                port:
                  number: 80
